favicons, og images, meta

--- a/index.html
+++ b/index.html
@@ -5,55 +5,42 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
-    <title>TBD</title>
+    <title>OctoSearch</title>
 
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#044389" />
-    <meta name="msapplication-TileColor" content="#2d89ef" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta name="description" content="TODO-TBD" />
-    <meta
-      name="keywords"
-      content="TODO-TBD"
-    /> -->
+    <meta name="description" content="Search GitHub repositiories with Octocat. View repositiory details and issues." />
+    <meta name="keywords" content="github, repo, repository, issues, search, octocat" />
 
     <!-- OG -->
-    <!-- <meta property="og:title" content="TODO-TBD" />
+    <meta property="og:title" content="OctoSearch" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://moniqueblignaut.co.za/" />
-    <meta
-      property="og:description"
-      content="Frontend Software Developer skilled in Vue and Typescript"
-    />
+    <meta property="og:url" content="TODO-TBD" />
+    <meta property="og:description" content="Search GitHub repositiories with Octocat. View repositiory details and issues." />
 
-    <meta property="og:image" content="TODO-TBD" />
+    <meta property="og:image" content="/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <meta property="og:image" content="TODO-TBD" />
+    <meta property="og:image" content="/og-square.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
 
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:alt" content="TODO-TBD" />
-    <meta property="og:site_name" content="TODO-TBD" /> -->
+    <meta property="og:image:alt" content="OctoSearch" />
+    <meta property="og:site_name" content="OctoSearch" />
 
     <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="TODO-TBD" />
-    <meta property="twitter:title" content="TODO-TBD" />
-    <meta
-      property="twitter:description"
-      content="TODO-TBD"
-    />
-    <meta
-      property="twitter:image"
-      content="TODO-TBD"
-    /> -->
+    <meta property="twitter:title" content="OctoSearch" />
+    <meta property="twitter:description" content="Search GitHub repositiories with Octocat. View repositiory details and issues." />
+    <meta property="twitter:image" content="/og.png" />
   </head>
   <body>
     <div id="app"></div>
