update og and site urls

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <!-- OG -->
     <meta property="og:title" content="OctoSearch" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="TODO-TBD" />
+    <meta property="og:url" content="https://octosearch.netlify.app/" />
     <meta property="og:description" content="Search GitHub repositiories with Octocat. View repositiory details and issues." />
 
-    <meta property="og:image" content="/og.png" />
+    <meta property="og:image" content="https://octosearch.netlify.app/img/og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <meta property="og:image" content="/og-square.png" />
+    <meta property="og:image" content="https://octosearch.netlify.app/img/og-square.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
 
@@ -37,10 +37,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="TODO-TBD" />
+    <meta property="twitter:url" content="https://octosearch.netlify.app/" />
     <meta property="twitter:title" content="OctoSearch" />
     <meta property="twitter:description" content="Search GitHub repositiories with Octocat. View repositiory details and issues." />
-    <meta property="twitter:image" content="/og.png" />
+    <meta property="twitter:image" content="https://octosearch.netlify.app/img/og.png" />
   </head>
   <body>
     <div id="app"></div>
